--- a/Hotel-Managerment-Project-Official-Last/src/CustomerCheckIn.form
+++ b/Hotel-Managerment-Project-Official-Last/src/CustomerCheckIn.form
@@ -410,6 +410,9 @@
           <Font name="Yu Gothic UI" size="14" style="1"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField8ActionPerformed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="867" y="426" width="320" height="-1"/>
